# solidity

./: CMakeLists.txt  Changelog.md
.circleci/: config.yml
cmake/: EthDependencies.cmake
docs/: index.rst  yul.rst
libdevcore/: Result.h
liblangutil/: CharStream.h
libsolidity/analysis/: ConstantEvaluator.cpp  TypeChecker.cpp
libsolidity/ast/: Types.cpp
libsolidity/codegen/: CompilerContext.h  CompilerUtils.cpp  ContractCompiler.cpp  ExpressionCompiler.cpp
libsolidity/formal/: SMTChecker.cpp  SMTChecker.h  SMTLib2Interface.cpp  SMTLib2Interface.h  SolverInterface.h  SymbolicTypes.cpp
libsolidity/inlineasm/: AsmParser.h
libsolidity/interface/: AssemblyStack.cpp  AssemblyStack.h  CompilerStack.cpp  StandardCompiler.cpp
libyul/: YulObject.cpp  YulObject.h  YulObjectParser.cpp  YulObjectParser.h
libyul/backends/evm/: AbstractAssembly.h  EVMAssembly.h
libyul/optimiser/: Suite.cpp
scripts/: install_deps.sh
test/libsolidity/: Assembly.cpp  SMTChecker.cpp  SolidityEndToEndTest.cpp
test/libsolidity/smtCheckerTests/control_flow/: do_while_1.sol  do_while_1_fail.sol  for_1.sol  for_1_fail.sol  while_1.sol
test/libsolidity/smtCheckerTests/functions/: function_call_does_not_clear_local_vars.sol  functions_trivial_condition_for.sol  functions_trivial_condition_while.sol
test/libsolidity/syntaxTests/conversion/: address_binary_operator.sol  function_unary_operator.sol  tuple_implicit_return.sol
test/libsolidity/syntaxTests/nameAndTypeResolution/: 198_integer_boolean_not.sol  201_integer_signed_exp_signed.sol
test/libsolidity/syntaxTests/types/mapping/: mapping_data_location_function_param_external.sol  mapping_data_location_function_param_public.sol  mapping_return_public_memory.sol
test/libyul/: YulObjectParser.cpp  YulOptimizerTest.cpp
test/tools/: yulopti.cpp
